# SCEA-ETP-DEETC

./: README.md
ParadisEO-2.0/$PLUGINSDIR/: NSIS.InstallOptions.ini
ParadisEO-2.0/lib32/pkgconfig/: eo.pc
ParadisEO-2.0/share/eo/doc/: CTestTestfile.cmake
ParadisEO-2.0/share/mo/doc/: mo.doxyfile
ParadisEO-2.0/share/moeo/doc/: moeo.doxyfile
SO-project-DEETC/: README.md
SO-project-DEETC/ETTP-Benchmarks/ExamEvaluate/: ReadMe-Nuno.txt
SO-project-DEETC/SO-project-DEETC/: cmd_line.txt
SO-project-DEETC/SO-project-DEETC/build-so-Desktop_MinGW_8_1_0_64_bit-Debug/: CMakeCache.txt  Makefile  SO-DEETC.cbp  cmake_install.cmake  qtcsettings.cmake
SO-project-DEETC/SO-project-DEETC/build-so-Desktop_MinGW_8_1_0_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-002a770417f7222253ae.json  cmakeFiles-v1-a19b13c625ebbbc34f18.json  codemodel-v2-b8e6c23cfdb9bf68759f.json  index-2020-06-20T23-08-38-0660.json  target-SOlib-Release-d06e6da56c9620051804.json  target-exes-Release-fbe7949085d8008ee321.json
SO-project-DEETC/SO-project-DEETC/build-so-Desktop_MinGW_8_1_0_64_bit-Debug/exes/: Makefile  cmake_install.cmake  exes.cbp
SO-project-DEETC/SO-project-DEETC/build-so-Desktop_MinGW_8_1_0_64_bit-Debug/exes/Run1/: LEETC_numPeriods_18_cost_357.csv  LEIC_numPeriods_18_cost_312.csv  LERCM_numPeriods_18_cost_137.csv  MEET_numPeriods_18_cost_77.csv  MEIC_numPeriods_18_cost_55.csv  deetc0910_1stEpoch_m_3_N_8_q_8_L_100000000_cp_0.2_mp_0_ip_1_up_0.001.sol  deetc0910_1stEpoch_m_3_N_8_q_8_L_100000000_cp_0.2_mp_0_ip_1_up_0.001.txt
SO-project-DEETC/SO-project-DEETC/build-so-Desktop_MinGW_8_1_0_64_bit-Debug/lib/: Makefile  SOlib.cbp  cmake_install.cmake
SO-project-DEETC/SO-project-DEETC/so/: CMakeLists.txt  CMakeLists.txt.user.1c0bd52.4.8-pre1  CMakeLists.txt.user.3.2-pre1  CMakeLists.txt.user.302446d  CMakeLists.txt.user.b00357e.2.7pre1
SO-project-DEETC/SO-project-DEETC/so/exes/: CMakeLists.txt  TestSO.cpp
SO-project-DEETC/SO-project-DEETC/so/lib/: CMakeLists.txt  CSVParser.h  Chromosome.cpp  Chromosome.h  Common.h  Crossover.h  Data.h  ETTPInit.h  ETTPKempeChainHeuristic.h  ETTPneighbor.h  ETTPneighborEval.h  ETTPneighborhood.h  Exam.h  ExtendedChromosome.cpp  ExtendedChromosome.h  GraphColouringHeuristics.cpp  GraphColouringHeuristics.h  MainApp.cpp  Matrix.cpp  Matrix.h  Mutation.h  ProximityCostEval.h  TestSet.h  TestSetDescription.h  TorontoTestSet.cpp  TorontoTestSet.h  Utils.cpp  eoETTPEval.h  eoETTPNumberClashesEval.h  eoEvolutionOperator.h  eoExtendedChromosome.cpp  eoExtendedChromosome.h  eoSCEA.h  eoSCEAConstrained.h  moSimpleCoolingSchedule.h  moTA.h  moTAexplorer.h
